--- a/config.org
+++ b/config.org
@@ -941,6 +941,7 @@ Maps numbers to windows on screen, allows switching windows by window number
 (add-hook 'prog-mode-hook 'rainbow-delimiters-mode)
 (add-hook 'prog-mode-hook 'linum-relative-mode)
 (add-hook 'prog-mode-hook 'whitespace-mode)
+(add-hook 'prog-mode-hook 'show-paren-mode)
 #+end_src
 
 
