--- a/config.org
+++ b/config.org
@@ -1124,6 +1124,31 @@ Maps numbers to windows on screen, allows switching windows by window number
 #+END_SRC
 
 
+* C#
+#+BEGIN_SRC emacs-lisp
+  (use-package csharp-mode :ensure t)
+;  (use-package omnisharp
+;    :commands csharp-mode
+;    :config
+;    (add-hook 'csharp-mode-hook 'omnisharp-mode)
+;    (add-to-list 'company-backends 'company-omnisharp))
+
+  (use-package omnisharp
+    :after company
+    :config
+;;(define-key omnisharp-mode-map (kbd ".") 'omnisharp-add-dot-and-auto-complete)
+(define-key omnisharp-mode-map (kbd "<C-SPC>") 'omnisharp-auto-complete)
+    (add-hook 'csharp-mode-hook
+              (lambda ()
+                (evil-define-key 'normal omnisharp-mode-map (kbd "g d") 'omnisharp-go-to-definition)
+                ))
+    (add-hook 'csharp-mode-hook 'omnisharp-mode)
+
+    (add-hook 'csharp-mode-hook (lambda () (whitespace-mode -1)))
+    (add-to-list 'company-backends 'company-omnisharp))
+#+END_SRC
+
+
 * Markdown
 #+BEGIN_SRC emacs-lisp
   (use-package markdown-mode
@@ -1199,18 +1224,4 @@ Maps numbers to windows on screen, allows switching windows by window number
 
 #+END_SRC
 Status: 
-
-* ✔ Done Defining face in typescript-mode.el
-
-* ✔ Done Add face to typescript mode and match via regex
-- defface
-** ⚐ In Progress | Waiting Match face via variable
-** ⚑ Todo Provide patch to typescript.el
-
-
-* ✔ Done Match against face/font-lock keyword from color theme
-- this overwrites styles that are set from ts-mode.el
-
-  
-* ⚑ Todo Just add small modification to faces
 
