Switch windows via leader + numbers

--- a/config.org
+++ b/config.org
@@ -363,12 +363,12 @@
 
      ;; Windows
      "w" '(:ignore t :which-key "Windows")
-     "w1" '(winum-select-window-1 :which-key "win 1")
-     "w2" '(winum-select-window-2 :which-key "win 2")
-     "w3" '(winum-select-window-3 :which-key "win 3")
-     "w4" '(winum-select-window-4 :which-key "win 4")
-     "w5" '(winum-select-window-5 :which-key "win 5")
-     "w6" '(winum-select-window-6 :which-key "win 6")
+     "1" '(winum-select-window-1 :which-key "win 1")
+     "2" '(winum-select-window-2 :which-key "win 2")
+     "3" '(winum-select-window-3 :which-key "win 3")
+     "4" '(winum-select-window-4 :which-key "win 4")
+     "5" '(winum-select-window-5 :which-key "win 5")
+     "6" '(winum-select-window-6 :which-key "win 6")
      "ws" '(split-window-below :which-key "Horizontal split")
      "wv" '(split-window-right :which-key "Vertical split")
      "wd" '(evil-window-delete :which-key "close window")
