--- a/config.org
+++ b/config.org
@@ -452,7 +452,7 @@ Making org mode work how I like it:
     (add-hook 'org-mode-hook 'visual-line-mode)
     (add-hook 'org-mode-hook 'company-mode)
     (add-hook 'org-mode-hook (lambda () (blink-cursor-mode -1)))
-    (add-hook 'org-mode-hook (lambda () (linum-relative-mode t)))
+    (add-hook 'org-mode-hook (lambda () (linum-relative-mode -1)))
     (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
 
 
