--- a/config.org
+++ b/config.org
@@ -1161,6 +1161,14 @@ Maps numbers to windows on screen, allows switching windows by window number
 #+END_SRC
 
 
+* Org Reveal
+#+BEGIN_SRC emacs-lisp
+  (use-package ox-reveal
+    :ensure t
+    :config (setq org-reveal-root "https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.js")
+)
+#+END_SRC
+
 * Misc
 #+BEGIN_SRC emacs-lisp
     (diminish 'company-mode)
