--- a/config.org
+++ b/config.org
@@ -151,26 +151,26 @@
 #+END_SRC
 ** Theme
 #+begin_src emacs-lisp
-  ;;(use-package subatomic-theme :ensure t)
-  ;;(use-package moe-theme :ensure t)
-  ;; (load-theme 'github-modern t)
-  ;; (load-theme 'subatomic t)
-  ;; (moe-light)
+   ;;(use-package subatomic-theme :ensure t)
+   ;;(use-package moe-theme :ensure t)
+   ;; (load-theme 'github-modern t)
+   ;; (load-theme 'subatomic t)
+   ;; (moe-light)
 
-  ;; (use-package spacemacs-theme
+   ;; (use-package spacemacs-theme
+   ;;   :ensure t
+   ;;   :defer t
+   ;;   :init (load-theme 'spacemacs-light t))
+
+  ;;  (use-package doom-themes
   ;;   :ensure t
   ;;   :defer t
-  ;;   :init (load-theme 'spacemacs-light t))
-
-;  (use-package doom-themes
-;    :ensure t
-;    :defer t
-;    :config (setq doom-themes-enable-bold nil
-;                  doom-themes-enable-italic nil))
-;  ;; (load-theme 'doom-one-light)
-;  ;(load-theme 'doom-one)
-;  (load-theme 'doom-dracula)
-  ;; (load-theme 'doom-molokai)
+  ;;   :config (setq doom-themes-enable-bold nil
+  ;;                 doom-themes-enable-italic nil))
+  ;; ;; (load-theme 'doom-one-light)
+  ;; ;(load-theme 'doom-one)
+  ;; (load-theme 'doom-dracula)
+   ;; (load-theme 'doom-molokai)
 
 #+end_src
 
@@ -202,6 +202,8 @@
 
 (defun setup-tide-mode ()
   (interactive)
+  (setq tide-node-executable "/home/chinchi/.nvm/versions/node/v9.0.0/bin/node")
+ (setq tide-tsserver-executable (expand-file-name tide--tsserver tide-tsserver-directory))
   (tide-setup)
   (flycheck-mode +1)
   (setq flycheck-check-syntax-automatically '(save mode-enabled))
@@ -1005,11 +1007,14 @@ Maps numbers to windows on screen, allows switching windows by window number
   ;; formats the buffer before saving
   ;;(add-hook 'before-save-hook 'tide-format-before-save)
   )
+(add-hook 'typescript-mode-hook #'setup-tide-mode)
 (setq typescript-indent-level 2
       typescript-expr-indent-offset 2)
 (setq evil-shift-width 2)
 (setq typescript-indent-level 2) ; 
-(setq tide-tsserver-executable "~/.node_modules/bin/tsserver")
+;;(setq tide-tsserver-executable "~/.nvm/versions/node/v9.0.0/lib/node_modules/typescript/bin/tsserver")
+;;  (setq tide-tsserver-executable (expand-file-name tide--tsserver tide-tsserver-directory))
+
 
 
 ;; typescript mode specific keybindings
@@ -1217,11 +1222,11 @@ Maps numbers to windows on screen, allows switching windows by window number
             (newline-mark ?\n    [?\n]) ; remove $ to not display it
             (tab-mark     ?\t    [?\u00BB ?\t] [?\\ ?\t])))
 
-;    (add-to-list 'custom-theme-load-path (file-name-as-directory "~/Dev/one-light-theme/"))
-;
-;    (load-theme 'one-light t t)
-;
-;    (enable-theme 'one-light)
+    (add-to-list 'custom-theme-load-path (file-name-as-directory "~/Dev/one-light-theme/"))
+
+    (load-theme 'one-light t t)
+
+    (enable-theme 'one-light)
 
   (mapc (lambda (mode)
           (font-lock-add-keywords
@@ -1230,8 +1235,21 @@ Maps numbers to windows on screen, allows switching windows by window number
           ;  ("\\.\\( \\)\\b" 1 'extra-whitespace-face))))
         '(text-mode latex-mode mhtml-mode html-mode emacs-lisp-mode typescript-mode js2-mode  js-mode css-mode scss-mode go-mode
           texinfo-mode))
-(evil-add-command-properties #'tide-jump-to-definition :jump t)
-
+(defvar my-prev-whitespace-mode nil)
+(make-variable-buffer-local 'my-prev-whitespace-mode)
+(defun pre-popup-draw ()
+  "Turn off whitespace mode before showing company complete tooltip"
+  (if whitespace-mode
+      (progn
+        (setq my-prev-whitespace-mode t)
+        (whitespace-mode -1)
+        (setq my-prev-whitespace-mode t))))
+(defun post-popup-draw ()
+  "Restore previous whitespace mode after showing company tooltip"
+  (if my-prev-whitespace-mode
+      (progn
+        (whitespace-mode 1)
+        (setq my-prev-whitespace-mode nil))))
+(advice-add 'company-pseudo-tooltip-unhide :before #'pre-popup-draw)
+(advice-add 'company-pseudo-tooltip-hide :after #'post-popup-draw)
 #+END_SRC
-Status: 
-
